--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset='utf-8'>
-  <title>Knowledge Testing System</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-<body>
-  <h2>Hello World</h2>
-</body>
-</html>
+<h2>Hello World</h2>
+<router-outlet></router-outlet>
