--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h2>Hello World</h2>
-<router-outlet></router-outlet>
+<div class="container">
+    <app-nav-menu></app-nav-menu>
+    <router-outlet></router-outlet>
+</div>
